spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -272,7 +272,7 @@ h3 {
     background: #eeeeee;
 }
 .campus-col {
-    flex-basis: 30%;
+    flex-basis: 26%;
     background-image: url(../images/bg_black.png);
     border-radius: 10px;
     margin-bottom: 50px;
